[package]
name = "anna"
version = "0.1.0"
authors = ["Karl Grasegger <51945878+grasegger@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "~0.2"
js-sys = "~0.3"
console_error_panic_hook = "~0.1"
async-trait = "~0.1"

[dependencies.web-sys]
version = "~0.3"
features = [
    "console",
    "Window", 
    "Document",
    "Element"
    ]
